--- a/olirvu.opam
+++ b/olirvu.opam
@@ -12,6 +12,7 @@ depends: [
   "ocaml" {>= "4.14.1"}
   "dune" {>= "3.7"}
   "bonsai" {>= "0.15.1"}
+  "brr" {>= "0.0.4"}
   "conduit-lwt" {>= "6.0.0"}
   "cohttp-lwt-unix" {>= "5.0.0"}
   "odoc" {with-doc}
