Basic stuff works

--- a/client/dune
+++ b/client/dune
@@ -3,4 +3,4 @@
  (modes js)
  (libraries bonsai bonsai.web bonsai.web_ui_form async_kernel async_js brr)
  (preprocess
-  (pps ppx_jane ppx_typed_fields ppx_sexp_message)))
+  (pps ppx_jane ppx_typed_fields ppx_sexp_message ppx_fields_conv)))
