--- a/olirvu.opam
+++ b/olirvu.opam
@@ -15,6 +15,7 @@ depends: [
   "brr" {>= "0.0.4"}
   "conduit-lwt" {>= "6.0.0"}
   "cohttp-lwt-unix" {>= "5.0.0"}
+  "integers_stubs_js" {>= "1.0"}
   "odoc" {with-doc}
 ]
 build: [
