Auto generate recipe

--- a/olirvu.opam
+++ b/olirvu.opam
@@ -17,6 +17,7 @@ depends: [
   "cohttp-lwt-unix" {>= "5.0.0"}
   "integers_stubs_js" {>= "1.0"}
   "atdgen" {>= "2.11.0"}
+  "ppx_make" {>= "0.3.2"}
   "odoc" {with-doc}
 ]
 build: [
