--- a/atd/dune
+++ b/atd/dune
@@ -5,7 +5,7 @@
   (:standard -w -27-32-34-35-39))
  (libraries atdgen core)
  (preprocess
-  (pps ppx_compare)))
+  (pps ppx_compare ppx_make)))
 
 ; ATD for quant_markers
 
@@ -13,7 +13,7 @@
  (targets quantization_t.ml quantization_t.mli)
  (deps quantization.atd)
  (action
-  (run atdgen -t %{deps})))
+  (run atdgen -t -deriving-conv make %{deps})))
 
 (rule
  (targets quantization_j.ml quantization_j.mli)
