--- a/olirvu.opam
+++ b/olirvu.opam
@@ -18,6 +18,7 @@ depends: [
   "integers_stubs_js" {>= "1.0"}
   "atdgen" {>= "2.11.0"}
   "ppx_make" {>= "0.3.2"}
+  "owl-base" {>= "1.1.0"}
   "odoc" {with-doc}
 ]
 build: [
